# group-project-team-39

./: .gitignore  README.md  docker-compose.yml  end_raiseholder.STL  endingpiece1.STL  extrusion_clamp.STL  mallet_holder.STL  motor_bottom_support.STL  spacer.STL  test_width4.STL  topfix.STL
cppsvc/: CMakeLists.txt  Dockerfile  calibrate.cpp  docker-compose.yml  main.cpp
cppsvc/include/: gantry.hpp  iSV57T.hpp  ipc_handler.hpp  limitSwitch.hpp  pwm_utils.h
cppsvc/src/: gantry.cpp  iSV57T.cpp  ipc_handler.cpp  limitSwitch.cpp
cppsvc/stl_designs/: bottomfix.STL  endblock.STL  extend_plate.STL  motor_bottom_support2.STL  slidernew.STL  tst_bottom.STL
docs/: Ixora_X27_Apalis_iMX8_GPIO_Mapping.xlsx  air_hockey_ipc_workflow_c7b9b537.plan.md  handoff.md
m4fw/: .gitignore  CMakeLists.txt  Dockerfile  README.md
m4fw/app/: FreeRTOSConfig.h  delay_us.h  empty_rsc_table.c  gantry.cpp  gantry.hpp  iSV57T.cpp  iSV57T.hpp  limitSwitch.cpp  limitSwitch.hpp  main.cpp
m4fw/board/: board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
m4fw/cmake/: arm-none-eabi-toolchain.cmake
m4fw/scripts/: extract_sdk.sh  loader.sh
pysvc/: Dockerfile  calibrate.py  calibrate_roi.py  calibrate_roi_apalis.py  calibration_config.py  camera.py  check_fps.py  crop_calibrate.py  fps_test.py  green_puck_detect.py  ipc.py  ipc_handler.py  kalman_tracker.py  main.py  nam.py  object_detect_Apalis.py  objectdetect_and_trajectory.py  python_apalis.py  requirements-ipc.txt  test_detection.py  trajectory_predictor.py  velocity.py  vision_preprocess.py  yolo_detector.py
stl_designs/: bearing_raise.STL  bearingholder.STL  endblock_stopper.STL  final_endraise.STL  finals1.STL  finals2.STL  idler_holder.STL  motor_raise.STL  slider2.STL  test_top.STL  tst_bottom2.STL
